--- a/config.h.in
+++ b/config.h.in
@@ -1,20 +1,36 @@
-/* config.h.in.  Generated automatically from configure.in by autoheader.  */
-
-/* Define if the X Window System is missing or not being used.  */
-#undef X_DISPLAY_MISSING
+/* config.h.in.  Generated from configure.ac by autoheader.  */
+#undef PACKAGE
+#undef VERSION
 
 /* Do we have the Simple Directmedia Layer library */
 #undef HAVE_SDL
 
-/* Define if you have the esd library (-lesd).  */
+/* Define to 1 if you have the `esd' library (-lesd). */
 #undef HAVE_LIBESD
 
-/* Define if you have the vga library (-lvga).  */
+/* Define to 1 if you have the `vga' library (-lvga). */
 #undef HAVE_LIBVGA
 
 /* Name of package */
 #undef PACKAGE
 
+/* Define to the address where bug reports for this package should be sent. */
+#undef PACKAGE_BUGREPORT
+
+/* Define to the full name of this package. */
+#undef PACKAGE_NAME
+
+/* Define to the full name and version of this package. */
+#undef PACKAGE_STRING
+
+/* Define to the one symbol short name of this package. */
+#undef PACKAGE_TARNAME
+
+/* Define to the version of this package. */
+#undef PACKAGE_VERSION
+
 /* Version number of package */
 #undef VERSION
 
+/* Define to 1 if the X Window System is missing or not being used. */
+#undef X_DISPLAY_MISSING
